<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="Spotify_Streamer">SPOTIFY STREAMER</string>
    <string name="Scores_App">SCORES APP</string>
    <string name="Library_App">LIBRARY APP</string>
    <string name="Build_It_Bigger">BUILD IT BIGGER</string>
    <string name="XYZ_Reader">XYZ READER</string>
    <string name="Capstone">CAPSTONE: MY OWN APP</string>
</resources>
